@@ -1,8 +1,10 @@
-CHANGES.txt - 2008-03-27
+CHANGES.txt - 2008-04-01
 ------------------------
 
 CHANGES IN CUPS V1.4b1
 
+	- The default cupsd.conf file now includes an "authenticated"
+	  policy which requires authentication for remote print jobs.
 	- Added support for Czech and Hungarian in PPD files
 	  (STR #2735, STR #2736)
 	- The PPD compiler tools now support Mac OS X .strings files
